--- a/WeatherApp/Views/TopAndBottomLabelsView.xib
+++ b/WeatherApp/Views/TopAndBottomLabelsView.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="TopAndBottomLabelsView" customModule="WeatherApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="160" height="113"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -41,6 +41,10 @@
                 <constraint firstAttribute="trailing" secondItem="A7L-WN-ewE" secondAttribute="trailing" id="ooE-qu-s7C"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="descriptionLabel" destination="wvS-2y-lMM" id="HyD-aV-BeE"/>
+                <outlet property="valueLabel" destination="obd-7C-kvk" id="0dQ-9h-Wis"/>
+            </connections>
             <point key="canvasLocation" x="-125.19083969465649" y="-240.49295774647888"/>
         </view>
     </objects>
