--- a/WeatherApp/TableViewCells/WeatherForecastTableViewCell.xib
+++ b/WeatherApp/TableViewCells/WeatherForecastTableViewCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="WeatherForecastTableViewCell" customModule="WeatherApp" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="WeatherForecastTableViewCell" id="KGk-i7-Jjw" customClass="WeatherForecastTableViewCell" customModule="WeatherApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -17,30 +17,31 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dEG-Da-ldP">
-                        <rect key="frame" x="0.0" y="0.0" width="132" height="44"/>
+                        <rect key="frame" x="0.0" y="16" width="137" height="12"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uL8-IE-4PT">
-                        <rect key="frame" x="140" y="0.0" width="40" height="44"/>
+                        <rect key="frame" x="145" y="0.0" width="30" height="44"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="40" id="GIe-kw-3fS"/>
+                            <constraint firstAttribute="width" constant="30" id="GIe-kw-3fS"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xoi-NR-DmX">
-                        <rect key="frame" x="188" y="0.0" width="132" height="44"/>
+                        <rect key="frame" x="183" y="0.0" width="137" height="44"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <color key="backgroundColor" red="1" green="0.62312068210000005" blue="0.439348395" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
                     <constraint firstItem="uL8-IE-4PT" firstAttribute="leading" secondItem="dEG-Da-ldP" secondAttribute="trailing" constant="8" id="572-VC-irp"/>
                     <constraint firstItem="dEG-Da-ldP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="AdL-oE-CX9"/>
                     <constraint firstItem="uL8-IE-4PT" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="BDR-g1-IrR"/>
-                    <constraint firstAttribute="bottom" secondItem="dEG-Da-ldP" secondAttribute="bottom" id="QqY-Dr-TQu"/>
-                    <constraint firstItem="dEG-Da-ldP" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="TBL-Un-fj6"/>
+                    <constraint firstAttribute="bottom" secondItem="dEG-Da-ldP" secondAttribute="bottom" constant="16" id="QqY-Dr-TQu"/>
+                    <constraint firstItem="dEG-Da-ldP" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="TBL-Un-fj6"/>
                     <constraint firstAttribute="trailing" secondItem="Xoi-NR-DmX" secondAttribute="trailing" id="WI8-tq-hM1"/>
                     <constraint firstItem="Xoi-NR-DmX" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="XtZ-kk-9To"/>
                     <constraint firstAttribute="bottom" secondItem="Xoi-NR-DmX" secondAttribute="bottom" id="gtY-AN-qLV"/>
@@ -51,6 +52,11 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="temperatureLabel" destination="Xoi-NR-DmX" id="cQz-n2-ngQ"/>
+                <outlet property="weatherIconImageView" destination="uL8-IE-4PT" id="sXX-A6-nZu"/>
+                <outlet property="weekDayLabel" destination="dEG-Da-ldP" id="iHP-ZO-V5Q"/>
+            </connections>
             <point key="canvasLocation" x="55" y="20"/>
         </tableViewCell>
     </objects>
