--- a/WeatherApp/Storyboards/Base.lproj/Main.storyboard
+++ b/WeatherApp/Storyboards/Base.lproj/Main.storyboard
@@ -16,16 +16,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YsP-kl-Gf0">
-                                <rect key="frame" x="0.0" y="59" width="393" height="250"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YsP-kl-Gf0">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="300"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="250" id="g0d-W8-a3i"/>
+                                    <constraint firstAttribute="height" constant="300" id="g0d-W8-a3i"/>
                                 </constraints>
                             </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="eIX-86-HPb">
-                                <rect key="frame" x="0.0" y="309" width="393" height="543"/>
+                                <rect key="frame" x="0.0" y="300" width="393" height="552"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zAs-47-czV" customClass="TopAndBottomLabelsView" customModule="WeatherApp" customModuleProvider="target">
+                                <rect key="frame" x="76.666666666666686" y="100" width="240" height="100"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="9dJ-eD-5zA"/>
+                                    <constraint firstAttribute="height" constant="100" id="mNc-2q-PLy"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -35,12 +45,15 @@
                             <constraint firstItem="eIX-86-HPb" firstAttribute="top" secondItem="YsP-kl-Gf0" secondAttribute="bottom" id="OZm-rh-Vl0"/>
                             <constraint firstItem="YsP-kl-Gf0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="awx-OA-hHU"/>
                             <constraint firstItem="eIX-86-HPb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="bUP-zW-B3x"/>
+                            <constraint firstItem="zAs-47-czV" firstAttribute="centerX" secondItem="YsP-kl-Gf0" secondAttribute="centerX" id="cTy-Fj-Cy5"/>
                             <constraint firstAttribute="bottom" secondItem="eIX-86-HPb" secondAttribute="bottom" id="knx-HG-9xA"/>
-                            <constraint firstItem="YsP-kl-Gf0" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="zvX-0j-V5q"/>
+                            <constraint firstItem="zAs-47-czV" firstAttribute="centerY" secondItem="YsP-kl-Gf0" secondAttribute="centerY" id="ul8-Xp-Lcl"/>
+                            <constraint firstItem="YsP-kl-Gf0" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="zvX-0j-V5q"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="backgroundImageView" destination="YsP-kl-Gf0" id="P38-2e-ZEr"/>
+                        <outlet property="currentDetailsView" destination="zAs-47-czV" id="0o2-4F-Hdw"/>
                         <outlet property="weatherForecastTableView" destination="eIX-86-HPb" id="w1O-8S-RsQ"/>
                     </connections>
                 </viewController>
